infra/k8s/comments-moderator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-moderator-depl
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: comments-moderator
  template:
    metadata:
      labels:
        app: comments-moderator
    spec:
      containers:
        - name: comments-moderator
          image: m3k3r1/comments-moderator:latest
---
apiVersion : v1
kind: Service
metadata:
  name: comments-moderator-srv
spec: 
  selector:
    app: comments-moderator
  type: ClusterIP
  ports:
    - name: comments-moderator
      protocol: TCP
      port: 4003
      targetPort: 4003
