infra/k8s/query-handler-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-handler-depl
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: query-handler
  template:
    metadata:
      labels:
        app: query-handler
    spec:
      containers:
        - name: query-handler
          image: m3k3r1/query-handler:latest
---
apiVersion : v1
kind: Service
metadata:
  name: query-handler-clusterip-srv
spec: 
  selector:
    app: query-handler
  type: ClusterIP
  ports:
    - name: query-handler
      protocol: TCP
      port: 4002
      targetPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: query-handler-nodeport-srv
spec: 
  type: NodePort
  selector:
    app: query-handler
  ports:
    - name: query-handler
      protocol: TCP
      port: 4002
      targetPort: 4002
